# Turing-Machine

./: CMakeLists.txt  README.md  main.cpp
include/: alphabet.h  movement.h  state.h  tape.h  transition.h  turingMachine.h  turing_machine.h
src/: alphabet.cpp  movement.cpp  state.cpp  tape.cpp  transition.cpp  turingMachine.cpp  turing_machine.cpp
test/: ej1.txt  ej2.txt
